[gd_scene load_steps=6 format=3 uid="uid://ceqcxqo62twgj"]

[ext_resource type="Script" path="res://scenes/systems/TerrainGenerator/TerrainGenerator.gd" id="1_woahw"]
[ext_resource type="Texture2D" uid="uid://gqsnjo7oejik" path="res://sprites/sunnyland_2d_pixel_art_pack/tileset-modified.png" id="1_ykw5y"]
[ext_resource type="PackedScene" uid="uid://cnvy3kf61ktp1" path="res://scenes/systems/Water/Water.tscn" id="3_ties4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dxfn2"]
texture = ExtResource("1_ykw5y")
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0/terrains_peering_bit/right_side = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/left_side = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/left_side = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -0.125, 8, -8, 1.375)
7:1/0/terrains_peering_bit/right_side = 0
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/terrain = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0/terrains_peering_bit/right_side = 0
9:1/0/terrains_peering_bit/left_side = 0
11:1/0 = 0
11:1/0/terrain_set = 0
11:1/0/terrain = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 1.375, -0.25, 8, -8, 8)
11:1/0/terrains_peering_bit/left_side = 0
13:1/0 = 0
13:1/0/terrain_set = 0
13:1/0/terrain = 0
13:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:1/0/physics_layer_0/angular_velocity = 0.0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0/terrains_peering_bit/bottom_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/bottom_side = 0
1:3/0/terrains_peering_bit/top_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0/terrains_peering_bit/right_side = 0
3:3/0/terrains_peering_bit/bottom_side = 0
3:3/0/terrains_peering_bit/left_side = 0
3:3/0/terrains_peering_bit/top_side = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0/terrains_peering_bit/bottom_side = 0
5:3/0/terrains_peering_bit/left_side = 0
5:3/0/terrains_peering_bit/top_side = 0
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/terrain_set = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:3/0 = 0
11:3/0/terrain_set = 0
11:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:3/0/physics_layer_0/angular_velocity = 0.0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0 = 0
13:3/0/terrain_set = 0
13:3/0/terrain = 0
13:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:3/0/physics_layer_0/angular_velocity = 0.0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0/terrains_peering_bit/bottom_side = 0
13:3/0/terrains_peering_bit/top_side = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0/terrains_peering_bit/right_side = 0
1:5/0/terrains_peering_bit/top_side = 0
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrain = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0/terrains_peering_bit/right_side = 0
3:5/0/terrains_peering_bit/left_side = 0
3:5/0/terrains_peering_bit/top_side = 0
5:5/0 = 0
5:5/0/terrain_set = 0
5:5/0/terrain = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0/terrains_peering_bit/left_side = 0
5:5/0/terrains_peering_bit/top_side = 0
9:5/0 = 0
9:5/0/terrain_set = 0
9:5/0/terrain = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:5/0 = 0
13:5/0/terrain_set = 0
13:5/0/terrain = 0
13:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:5/0/physics_layer_0/angular_velocity = 0.0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:5/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_jo8ff"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Ground 0"
terrain_set_0/terrain_0/color = Color(0.635294, 0.0627451, 0.580392, 1)
sources/3 = SubResource("TileSetAtlasSource_dxfn2")

[node name="TerrainGenerator" type="Node2D"]
script = ExtResource("1_woahw")

[node name="Water" parent="." instance=ExtResource("3_ties4")]
depth = 1000.0

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_jo8ff")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(720896, 196611, 5, 655360, 196611, 3, 589824, 196611, 3, 524288, 196611, 3, 458752, 327683, 1, 720897, 196611, 5, 655361, 196611, 3, 589825, 327683, 3, 524289, 327683, 1, 720898, 196611, 5, 655362, 196611, 1, 720899, 196611, 5, 655363, 196611, 3, 589827, 65539, 3, 524291, 65539, 3, 458755, 851971, 3, 393219, 851971, 1, 720900, 196611, 5, 655364, 196611, 3, 589828, 196611, 3, 524292, 196611, 1, 720901, 196611, 5, 655365, 196611, 3, 589829, 196611, 3, 524293, 196611, 1, 720902, 196611, 5, 655366, 196611, 3, 589830, 196611, 3, 524294, 327683, 1, 720903, 196611, 5, 655367, 196611, 3, 589831, 196611, 1, 720904, 196611, 5, 655368, 196611, 3, 589832, 196611, 1, 720905, 196611, 5, 655369, 196611, 3, 589833, 196611, 1, 720906, 196611, 5, 655370, 196611, 3, 589834, 196611, 3, 524298, 851971, 3, 458762, 851971, 3, 393226, 851971, 1, 720907, 196611, 5, 655371, 196611, 3, 589835, 196611, 1, 720908, 196611, 5, 655372, 196611, 3, 589836, 196611, 3, 524300, 851971, 1, 720909, 196611, 5, 655373, 196611, 3, 589837, 196611, 1, 720910, 196611, 5, 655374, 196611, 3, 589838, 196611, 3, 524302, 65539, 3, 458766, 65539, 1, 720911, 196611, 5, 655375, 196611, 3, 589839, 196611, 3, 524303, 196611, 3, 458767, 327683, 1, 720912, 196611, 5, 655376, 196611, 3, 589840, 196611, 3, 524304, 196611, 1, 720913, 196611, 5, 655377, 196611, 3, 589841, 196611, 3, 524305, 327683, 3, 458769, 851971, 1, 720914, 196611, 5, 655378, 196611, 3, 589842, 196611, 1, 720915, 196611, 5, 655379, 196611, 3, 589843, 196611, 3, 524307, 65539, 3, 458771, 851971, 3, 393235, 851971, 1, 720916, 196611, 5, 655380, 196611, 3, 589844, 196611, 3, 524308, 196611, 1, 720917, 196611, 5, 655381, 196611, 3, 589845, 196611, 3, 524309, 327683, 3, 458773, 851971, 3, 393237, 851971, 3, 327701, 851971, 1, 720918, 196611, 5, 655382, 196611, 3, 589846, 196611, 1, 720919, 196611, 5, 655383, 196611, 3, 589847, 196611, 3, 524311, 65539, 3, 458775, 65539, 1, 720920, 196611, 5, 655384, 196611, 3, 589848, 196611, 3, 524312, 196611, 3, 458776, 196611, 3, 393240, 851971, 3, 327704, 851971, 1, 720921, 196611, 5, 655385, 196611, 3, 589849, 196611, 3, 524313, 196611, 3, 458777, 196611, 1, 720922, 196611, 5, 655386, 196611, 3, 589850, 196611, 3, 524314, 327683, 3, 458778, 327683, 3, 393242, 851971, 1, 720923, 196611, 5, 655387, 196611, 3, 589851, 196611, 1, 720924, 196611, 5, 655388, 196611, 3, 589852, 196611, 3, 524316, 65539, 3, 458780, 65539, 1, 720925, 196611, 5, 655389, 196611, 3, 589853, 196611, 3, 524317, 196611, 3, 458781, 327683, 1, 720926, 196611, 5, 655390, 196611, 3, 589854, 196611, 3, 524318, 196611, 1, 720927, 196611, 5, 655391, 196611, 3, 589855, 196611, 3, 524319, 196611, 3, 458783, 851971, 1, 720928, 196611, 5, 655392, 196611, 3, 589856, 196611, 3, 524320, 196611, 1, 720929, 196611, 5, 655393, 196611, 3, 589857, 196611, 3, 524321, 196611, 3, 458785, 65539, 3, 393249, 851971, 1, 720930, 196611, 5, 655394, 196611, 3, 589858, 196611, 3, 524322, 196611, 3, 458786, 327683, 1, 720931, 196611, 5, 655395, 196611, 3, 589859, 196611, 3, 524323, 327683, 1, 720932, 196611, 5, 655396, 196611, 3, 589860, 196611, 1, 720933, 196611, 5, 655397, 196611, 3, 589861, 196611, 3, 524325, 65539, 3, 458789, 65539, 1, 720934, 196611, 5, 655398, 196611, 3, 589862, 196611, 3, 524326, 327683, 3, 458790, 327683, 3, 393254, 851971, 1, 720935, 196611, 5, 655399, 196611, 3, 589863, 196611, 1, 720936, 196611, 5, 655400, 196611, 3, 589864, 196611, 3, 524328, 65539, 3, 458792, 65539, 1, 720937, 196611, 5, 655401, 196611, 3, 589865, 196611, 3, 524329, 196611, 3, 458793, 196611, 3, 393257, 851971, 1, 720938, 196611, 5, 655402, 196611, 3, 589866, 196611, 3, 524330, 196611, 3, 458794, 327683, 1, 720939, 196611, 5, 655403, 196611, 3, 589867, 196611, 3, 524331, 196611, 1, 720940, 196611, 5, 655404, 196611, 3, 589868, 196611, 3, 524332, 196611, 3, 458796, 65539, 1, 720941, 196611, 5, 655405, 196611, 3, 589869, 196611, 3, 524333, 196611, 3, 458797, 196611, 1, 720942, 196611, 5, 655406, 196611, 3, 589870, 196611, 3, 524334, 196611, 3, 458798, 196611, 3, 393262, 851971, 1, 720943, 196611, 5, 655407, 196611, 3, 589871, 196611, 3, 524335, 196611, 3, 458799, 196611, 1, 720944, 196611, 5, 655408, 196611, 3, 589872, 196611, 3, 524336, 327683, 3, 458800, 327683, 3, 393264, 851971, 1, 720945, 196611, 5, 655409, 196611, 3, 589873, 196611, 1, 720946, 196611, 5, 655410, 196611, 3, 589874, 196611, 3, 524338, 65539, 3, 458802, 851971, 3, 393266, 851971, 3, 327730, 851971, 3, 262194, 851971, 1, 720947, 196611, 5, 655411, 196611, 3, 589875, 196611, 3, 524339, 196611, 1, 720948, 196611, 5, 655412, 196611, 3, 589876, 196611, 3, 524340, 196611, 3, 458804, 851971, 1, 720949, 196611, 5, 655413, 196611, 3, 589877, 196611, 3, 524341, 196611, 1, 720950, 196611, 5, 655414, 196611, 3, 589878, 196611, 3, 524342, 327683, 3, 458806, 851971, 1, 720951, 196611, 5, 655415, 196611, 3, 589879, 196611, 1, 720952, 196611, 5, 655416, 196611, 3, 589880, 196611, 3, 524344, 65539, 3, 458808, 65539, 1, 720953, 196611, 5, 655417, 196611, 3, 589881, 196611, 3, 524345, 327683, 3, 458809, 327683, 3, 393273, 851971, 3, 327737, 851971, 1, 720954, 196611, 5, 655418, 196611, 3, 589882, 196611, 1, 720955, 196611, 5, 655419, 196611, 3, 589883, 196611, 3, 524347, 65539, 1, 720956, 196611, 5, 655420, 196611, 3, 589884, 196611, 3, 524348, 196611, 3, 458812, 65539, 3, 393276, 65539, 1, 720957, 196611, 5, 655421, 196611, 3, 589885, 196611, 3, 524349, 196611, 3, 458813, 196611, 3, 393277, 196611, 1, 720958, 196611, 5, 655422, 196611, 3, 589886, 196611, 3, 524350, 196611, 3, 458814, 196611, 3, 393278, 196611, 1, 720959, 196611, 5, 655423, 196611, 3, 589887, 196611, 3, 524351, 196611, 3, 458815, 196611, 3, 393279, 327683, 1, 720960, 196611, 5, 655424, 196611, 3, 589888, 196611, 3, 524352, 327683, 3, 458816, 327683, 1, 720961, 196611, 5, 655425, 196611, 3, 589889, 196611, 1, 720962, 196611, 5, 655426, 196611, 3, 589890, 196611, 3, 524354, 65539, 3, 458818, 65539, 1, 720963, 196611, 5, 655427, 196611, 3, 589891, 196611, 3, 524355, 196611, 3, 458819, 327683, 3, 393283, 851971, 1, 720964, 196611, 5, 655428, 196611, 3, 589892, 196611, 3, 524356, 196611, 1, 720965, 196611, 5, 655429, 196611, 3, 589893, 196611, 3, 524357, 196611, 1, 720966, 196611, 5, 655430, 196611, 3, 589894, 196611, 3, 524358, 196611, 3, 458822, 851971, 1, 720967, 196611, 5, 655431, 196611, 3, 589895, 196611, 3, 524359, 196611, 1, 720968, 196611, 5, 655432, 196611, 3, 589896, 196611, 3, 524360, 327683, 3, 458824, 851971, 1, 720969, 196611, 5, 655433, 196611, 3, 589897, 196611, 1, 720970, 196611, 5, 655434, 196611, 3, 589898, 196611, 1, 720971, 196611, 5, 655435, 196611, 3, 589899, 327683, 3, 524363, 851971, 3, 458827, 851971, 1, 720972, 196611, 5, 655436, 196611, 1, 720973, 196611, 5, 655437, 196611, 3, 589901, 65539, 3, 524365, 65539, 3, 458829, 65539, 1, 720974, 196611, 5, 655438, 196611, 3, 589902, 327683, 3, 524366, 327683, 3, 458830, 327683, 1, 720975, 196611, 5, 655439, 196611, 1, 720976, 196611, 5, 655440, 196611, 3, 589904, 65539, 3, 524368, 65539, 3, 458832, 65539, 1, 720977, 196611, 5, 655441, 196611, 3, 589905, 196611, 3, 524369, 196611, 3, 458833, 327683, 1, 720978, 196611, 5, 655442, 196611, 3, 589906, 196611, 3, 524370, 196611, 1, 720979, 196611, 5, 655443, 196611, 3, 589907, 196611, 3, 524371, 196611, 1, 720980, 196611, 5, 655444, 196611, 3, 589908, 196611, 3, 524372, 196611, 3, 458836, 851971, 3, 393300, 851971, 1, 720981, 196611, 5, 655445, 196611, 3, 589909, 196611, 3, 524373, 327683, 1, 720982, 196611, 5, 655446, 196611, 3, 589910, 196611, 1, 720983, 196611, 5, 655447, 196611, 3, 589911, 196611, 3, 524375, 65539, 3, 458839, 851971, 1, 720984, 196611, 5, 655448, 196611, 3, 589912, 196611, 3, 524376, 327683, 1, 720985, 196611, 5, 655449, 196611, 3, 589913, 196611, 1, 720986, 196611, 5, 655450, 196611, 3, 589914, 196611, 3, 524378, 65539, 3, 458842, 65539, 3, 393306, 65539, 1, 720987, 196611, 5, 655451, 196611, 3, 589915, 327683, 3, 524379, 327683, 3, 458843, 327683, 3, 393307, 327683, 1, 720988, 196611, 5, 655452, 196611, 1, 720989, 196611, 5, 655453, 196611, 3, 589917, 851971, 3, 524381, 851971, 1, 720990, 196611, 5, 655454, 196611, 1, 720991, 327683, 5, 655455, 327683, 3, 589919, 851971, 3, 524383, 851971, 3, 458847, 851971, 3, 393311, 851971, 3, 327775, 851971, 1, 786431, 65539, 5, 720895, 65539, 3, 655359, 65539, 3, 589823, 65539, 3, 524287, 65539, 3, 458751, 851971, 3, 393215, 851971, 3, 327679, 851971, 3, 262143, 851971, 3, 196607, 851971, 3, 131071, 851971, 3, 65535, 851971, 1)
layer_1/name = "Water"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[connection signal="entered_water" from="Water" to="." method="_on_water_entered_water"]
[connection signal="exited_water" from="Water" to="." method="_on_water_exited_water"]
